[project]
name = "taskflow-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<4.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "msgpack>=1.1.2",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "redis[hiredis]>=7.4.0",
    "requests>=2.33.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
